todo on index.html

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </div>
     </div>
 
+    <!-- TODO: Add element for no missing exercises -->
+
     <!-- Missing Exercises -->
     <div class="container-fluid" id="missing">
         <div class="row pt-3 panel" id="html">
