added no missing exercises functionality

--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
         </div>
     </div>
 
-    <!-- TODO: Add element for no missing exercises -->
-
+    <!-- No Missing Exercises -->
+    <div class="container-fluid" id="no-missing">
+        <div class="row h-100">
+            <div class="col text-center my-auto">
+                <h1 class="text-white">your not missing any exercises!</h1>
+                <h1 class="text-white"><i class="fas fa-laugh"></i></h1>
+            </div>
+        </div>
+    </div>
+    
     <!-- Missing Exercises -->
     <div class="container-fluid" id="missing">
         <div class="row pt-3 panel" id="html">
