<Issue-9>Dynamically display error messages based on form conditions
Currently there are 2 conditions being checked for. If the user did not enter a git hub username or if the user entered an invalid username. This should be deprecated once AuthO authentication is added.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
                     <input type="text" class="form-control" id="repo">
                 </div>
                 <button type="button" class="btn btn-outline-dark rounded-0 mt-3" id="check-exercises">check my missing exercises</button>
-                <h6 class="text-center text-danger mt-5" id="empty">you didn't enter a github name</h6>
-                <h6 class="text-center text-danger" id="invalid">the github name you provided does not have a codeup-web-exercises repo</h6>
+                <h6 class="text-center text-danger mt-5" id="errorMsg"></h6>
+                <!-- <h6 class="text-center text-danger mt-5" id="empty">you didn't enter a github name</h6> -->
+                <!-- <h6 class="text-center text-danger" id="invalid"></h6> -->
             </div>
         </div>
     </div>
