--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 </div>
                 <button type="button" class="btn btn-outline-dark rounded-0 mt-3" id="check-exercises">check my missing exercises</button>
                 <h6 class="text-center text-danger mt-5" id="errorMsg"></h6>
-                <!-- <h6 class="text-center text-danger mt-5" id="empty">you didn't enter a github name</h6> -->
-                <!-- <h6 class="text-center text-danger" id="invalid"></h6> -->
+
             </div>
         </div>
     </div>
@@ -82,6 +81,7 @@
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="node_modules/web-animations-js/web-animations-next-lite.min.js"></script>
     <script src="node_modules/scrollmagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
     <script src="node_modules/typed.js/lib/typed.js"></script>
     <script src="assets/js/custom.js"></script>
