--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,14 @@
                 <h1><span id="typed1"></span></h1>
                 <h6><span id="typed2"></span></h6>
                 <div class="input-group input-group-lg mt-5">
-                    <input type="text" class="form-control" id="repo">
+                    <input type="text" class="form-control" id="repo" placeholder="username">
+                </div>
+                <div class="input-group input-group-lg mt-5" id="password">
+                    <input type="password" class="form-control w-100" id="pass" placeholder="password">
+                    <i class="fas fa-eye" id="show"></i>
                 </div>
                 <button type="button" class="btn btn-outline-dark rounded-0 mt-3" id="check-exercises">check my missing exercises</button>
                 <h6 class="text-center text-danger mt-5" id="errorMsg"></h6>
-
             </div>
         </div>
     </div>
@@ -77,7 +80,7 @@
     </div>
 
     <!-- Scripts -->
-    
+
     <script src="index.js"></script>
 
 </body>
