Changed your to You're

--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
     <div class="container-fluid" id="no-missing">
         <div class="row h-100">
             <div class="col text-center my-auto">
-                <h1 class="text-white">your not missing any exercises!</h1>
+                <h1 class="text-white">You're not missing any exercises!</h1>
                 <h1 class="text-white"><i class="fas fa-laugh"></i></h1>
             </div>
         </div>
